--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.5",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -22,8 +24,5 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2"
   }
 }
