--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,12 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-			"@/api": ["src/pages/api"],
-      "@/components": ["src/components"],
-      "@/utils": ["src/utils"]
+      "@/*": ["*"],
+			"@/api/*": ["src/pages/api/*"],
+      "@/components/*": ["src/components/*"],
+      "@/utils/*": ["src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
