fix: import from utils.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 			"@/api/*": ["src/pages/api/*"],
       "@/components/*": ["src/components/*"],
       "@/hooks/*": ["src/hooks/*"],
-      "@/utils/*": ["src/utils/*"]
+      "@/utils": ["src/utils.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
