--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@/*": ["*"],
 			"@/api/*": ["src/pages/api/*"],
+      "@/features/*": ["src/features/*"],
       "@/components/*": ["src/components/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/utils": ["src/utils.ts"]
