fix: move Users to its own file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "paths": {
       "@/*": ["*"],
 			"@/api/*": ["src/pages/api/*"],
-      "@/features/*": ["src/features/*"],
       "@/components/*": ["src/components/*"],
+      "@/features/*": ["src/features/*"],
       "@/hooks/*": ["src/hooks/*"],
+      "@/models/*": ["src/models/*"],
       "@/utils": ["src/utils.ts"]
     }
   },
